--- a/www/index.html
+++ b/www/index.html
@@ -16,6 +16,15 @@
     const db = "m";
 
     function fetchAll() {
+      let name=$("name").val();
+      let TestDataClass=ncmb.DataStore(db);
+      TestDataClass.fetchAll().then(function(results){
+        showResults(results);
+      })
+    }
+
+
+     function searchName() {
       let TestDataClass = ncmb.DataStore(db);
       TestDataClass.order("name",false).fetchAll()
         .then(function(results) {
@@ -54,7 +63,7 @@
   </div>
   <div id="button">
     <button class="btn" onclick="fetchAll()">Fetch All</button>
-   <button class="btn" onclick="searchName()">Name</button>
+   <button class="btn" onclick="searchName()">Naｍme</button>
   </div>
   <div id="message">message area</div>
 </body>
