--- a/www/index.html
+++ b/www/index.html
@@ -75,7 +75,10 @@
   <div id="button">
     <button class="btn" onclick="fetchAll()">Fetch All</button>
    <button class="btn" onclick="searchName()">Naｍme</button>
+   <br>
+       <button class="btn" onclick="searchLevelLT()">Level &lt</button>
     <button class="btn" onclick="searchLevel()">Level</button>
+
   </div>
   <div id="message">message area</div>
 </body>
