feach allを押すと音が鳴る

--- a/www/index.html
+++ b/www/index.html
@@ -21,6 +21,9 @@
             TestDataClass.fetchAll().then(function(results) {
                 showResults(results);
             })
+        var audio = new Audio();
+        audio.src = "button.mp3";
+        audio.play(); 
         }
 
 
